style.css
/* ... */
.nav-list-top {
  display: none;
}

.nav-list-top-dropMobile {
  position: fixed;
  display: flex;
  flex-direction: column;
  gap: 20px;
  background: rgba(32, 29, 206, 0.6);
  backdrop-filter: blur(5px);
  width: 100vw;
  height: 100vh;
  top: 0;
  left: 0;
  padding-left: 8%;
  padding-right: 10%;
  margin-top: 0;
  padding-top: 30px;
  box-sizing: border-box;
  list-style: none;
}

#exit {
  background-color: rgba(0, 0, 0, 0);
  border: 0;
  margin-left: 92%;
  margin-right: 0;
}

.nav-list__options {
  text-decoration: none;
  color: white;
  font-weight: 600;
  font-size: 1.75rem;
}

/*
  Ends top navigation bar
/*
  introduction text container///////
*/

.header-text {
  background: #fff;
  background-image: url('./img/header-shapes\ mobile@2x.svg');
  background-size: 100%;
  border-radius: 0 0 0 50px;
  display: flex;
  flex-direction: column;
  align-items: baseline;
  padding-top: 17%;
  width: auto;
  color: #344563;
  padding-left: 6%;
  padding-right: 6%;
  padding-bottom: 20%;
}

.header-text h1 {
  /* this is a flex-box */
  min-width: 327px;
  min-height: 150px;
  width: 100%;
  font-weight: 700;
  font-size: 40px;
  line-height: 52px;
  align-items: center;
  order: 0;
  color: #172b4d;
  margin-bottom: 1%;
}

.header-text .description {
  min-width: 327px;
  width: 100%;
  font-family: 'Poppins', sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 16px;
  line-height: 24px;
  margin-top: 1%;
  margin-bottom: 1%;
}

.lets-connect {
  min-width: 327px;
  width: auto;
  height: 10%;
  height: 24px;
  font-weight: 500;
  font-size: 16px;
  line-height: 24px;
  color: #7f8cff;
  order: 2;
  margin-top: 1%;
  margin-bottom: 1%;
}

/*
    Social icon container///////
*/

.social-icon-container {
  min-width: 163px;
  width: 40%;
  display: flex;
  order: 3;
  align-items: baseline;
  justify-content: space-between;
  margin-top: 1%;
  padding-left: 0;
  list-style: none;
}

.social-icon-container a {
  border: 0;
  background-color: rgba(0, 0, 0, 0);
  width: fit-content;
}

.social-icon-container .social-icon {
  height: auto;
  width: 60%;
}

/*
  works section//////////
*/

.cards-container {
  display: grid;
  grid-template-rows: repeat(4, 1fr);
  margin-top: 100px;
  padding-left: 6%;
  padding-right: 6%;
  background: #f4f5f7;
}

.card-element {
  display: flex;
  flex-direction: column;
  border: 2px solid #dfe1e6;
  background-color: #fff;
  width: auto;
  height: auto;
  margin-top: 4%;
  padding-left: 4%;
  padding-right: 4%;
  padding-top: 3%;
  padding-bottom: 3%;
  border-radius: 10px;
}

.preview-picture {
  order: 0;
  margin: auto;
  justify-content: center;
  min-width: 295px;
  min-height: 220px;
  width: 100%;
}

.project-name {
  order: 1;
  margin-top: 2%;
  margin-bottom: 1%;
  min-width: 295px;
  min-height: 36px;
  color: #172b4d;
  font-weight: 700;
  font-size: 32px;
}

.project-frame {
  order: 2;
  padding-left: 0;
  margin-top: 1%;
  margin-bottom: 2%;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: baseline;
  width: 90%;
}

.project-frame li {
  min-width: 55px;
  min-height: 16px;
  font-weight: 600;
  font-size: 13px;
  color: #7a869a;
}

.card-main-text {
  order: 3;
  color: #344563;
  margin-top: 1%;
  text-align: left;
  font-weight: 400;
  font-size: 15px;
  line-height: 24px;
  min-width: 295px;
  min-height: 76px;
  padding-right: 10%;
}

.technology-tags {
  order: 4;
  display: flex;
  flex-direction: row;
  width: 60%;
  padding-left: 0;
  margin-bottom: 2%;
  justify-content: space-between;
  align-items: baseline;
}

.technology-tags li {
  list-style: none;
  min-height: 16px;
  font-weight: 500;
  font-size: 12px;
  line-height: 16px;
  color: #6070ff;
  background-color: #ebebff;
  border-radius: 10%;
  padding-left: 4%;
  padding-right: 4%;
}

.See-project-button {
  order: 5;
  border: 1px solid #396df2;
  border-radius: 10px;
  background-color: #fff;
  color: #396df2;
  padding: 12px;
  padding-left: 1%;
  padding-right: 1%;
  width: 126px;
  margin-top: 8%;
}

/*
  Works Section------Popup-Starts;
*/

.portfolio-pupUp-backgroundOpen {
  display: block;
  position: fixed;
  top: 0;
  left: 0;
  width: 100vw;
  height: 100vh;
  box-sizing: border-box;
  padding-top: 18px;
  padding-bottom: 10%;
  padding-left: 9.8%;
  padding-right: 9.8%;
  background-color: rgba(193, 199, 208, 0.6);
  backdrop-filter: blur(8px);
}

.portfolio-pupUp-backgroundClose {
  display: none;
}

.porfolio_pop-up_main-container {
  display: flex;
  flex-direction: column;
  gap: 12px;
  padding-top: 18px;
  padding-bottom: 20px;
  padding-left: 4%;
  padding-right: 4%;
  background: #fff;
  border: 2px solid #dfe1e6;
  border-radius: 12px;
  height: 94vh;
  box-sizing: border-box;
}

.porfolio_pop-up_header {
  display: flex;
  order: 0;
  flex-direction: column;
}

.porfolio_pop-up_header .pop-up-top {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
}

.pop-up_project-frame {
  margin: 0;
  padding-left: 0;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: baseline;
  font-size: 75%;
  width: 75%;
}

.pop-up_project-frame li {
  color: #7a869a;
  font-weight: 600;
}

.pop-up-top h2 {
  margin: 0;
}

.preview {
  max-height: 30vh;
  width: auto;
}

.buttons-container {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
}

.buttons-container button {
  width: 48%;
  display: flex;
  gap: 10%;
  flex-direction: row;
  justify-content: center;
  align-items: center;
}

#portfolioPopUpCloseBtn {
  border: 0;
  background-color: rgba(0, 0, 0, 0);
}

/*
  Works Section------PopUp-ends;
*/

/*
Work Section Ends---------------------------
/*
  about myself section
*/

.about-me-wrap {
  display: flex;
  flex-direction: column;
  background: #fff;
  border-radius: 0 50px 0 0;
  padding-left: 6%;
  padding-right: 6%;
  padding-top: 10%;
  padding-bottom: 35%;
  margin-top: 200px;
}
/* ... */

